<resources>
    <string name="app_name">Music Story Application</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="register_name">Create Account</string>
    <string name="email_hint">example@xxx.com</string>
    <string name="password_hint">Enter a valid password</string>
    <string name="password_hint_regist">Enter min 8 characters</string>
    <string name="name">Full Name</string>
    <string name="name_hint">Enter your full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Re-enter your password</string>
    <string name="back">Go Back</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_profile">User Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_message">An error occurred.\nPlease try again.</string>
    <string name="image_error">Image Error</string>
    <string name="ok">OK</string>
    <string name="success_create_user">Account successfully registered</string>
    <string name="user_image">User Profile Picture</string>
    <string name="setting">Settings</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="logout">Log Out</string>
    <string name="title_stories">Stories</string>
    <string name="empty_stories">No stories found</string>
    <string name="floating_button">Create a Story</string>
    <string name="create_story">Create New Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="submit">Submit</string>
    <string name="description_hint">Add a Description</string>
    <string name="permission_denied">To enhance your experience, please grant Camera and Storage permissions.</string>
    <string name="success_create_story">Your story has been created!</string>
    <string name="error_validation">Please ensure all input fields are correct.</string>
    <string name="detail_story">Story Details</string>
    <string name="created_by">Created By</string>
    <string name="description">Description</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="title_maps">Map</string>
    <string name="location_not_found">Location not found. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="welcome">Welcome User</string>
    <string name="start">Start swipe</string>
    <string name="swift"><![CDATA[<![CDATA[Swipe >>]]></string>
    <string name="tag_line">Share Your Feels ,Share your life</string>
    <string name="motto">Share your Music ,Share your Stories</string>
</resources>
